# Skadi

./: Cargo.toml
src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs
src/controllers/: city_search.rs  mod.rs  search_controller.rs  weather_controller.rs
src/events/: handle_event.rs  input_events.rs  key_events.rs  mod.rs  result_events.rs
src/services/: geocoding.rs  mod.rs  weather.rs
src/state/: app_state.rs  city.rs  history.rs  mod.rs  weather.rs
src/ui/: city_search.rs  current_weather.rs  detailed_weather.rs  favorites.rs  forecast.rs  history.rs  input.rs  mod.rs  render.rs  search_results.rs
src/utils/: chrono_utils.rs  mod.rs  ui_utils.rs  weather_utils.rs
