[package]
name = "weather"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "weather"

[dependencies]
anyhow = "1"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-input = "0.14.0"
reqwest = { version = "0.12.25", features = ["blocking" ,"json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
dirs = "6.0.0"
ron = "0.12.0"
